# NoirUtility

./: .gitignore  .gitmodules  CMakeLists.txt  NoirUtility1.sln  NoirUtility1.vcxproj  NoirUtility1.vcxproj.filters
Application/: Application.h  CMakeLists.txt  main.cpp
